# ai-research-evaluator

./: .gitignore  AGENTS.md  README.md  judge.md  pyproject.toml  requirements.txt  项目结构.md  项目规划.md
ai_research_evaluator/: .env.example  LICENSE
ai_research_evaluator/.github/workflows/: tests.yml
ai_research_evaluator/data/: .gitkeep
ai_research_evaluator/reports/: .gitkeep
ai_research_evaluator/scripts/: evaluate.py
ai_research_evaluator/src/: __init__.py
ai_research_evaluator/src/data/: __init__.py
ai_research_evaluator/src/utils/: __init__.py  exceptions.py
ai_research_evaluator/tests/: __init__.py  test_placeholder.py
config/: .gitkeep
scripts/: __init__.py
src/data/: __init__.py  cleaner.py  loader.py  schema.py
src/evaluation/: __init__.py
src/llm/: __init__.py
src/report/: __init__.py
tests/: conftest.py  test_loader.py
tests/test_data/: sample_papers.csv
